# poker-assistant

./: .gitignore  Cargo.toml  flake.nix  package.yaml
app/: Main.hs
codegen/: Cargo.toml  build.rs
codegen/src/: lib.rs
compact-poker/: Cargo.toml
compact-poker/src/: lib.rs
lib/: Cargo.toml
lib/src/: commands.rs  game_repr.rs  lib.rs  main.rs
lib/src/prediction/: model.rs  montecarlo.rs
lookup/: Cargo.toml
lookup/src/: lib.rs
src/: Poker.hs  hand_lookup.rs  main.rs  types.rs
src/Poker/: Game.hs
src/prediction/: mod.rs  model.rs  montecarlo.rs
test/: PokerSpec.hs
tui/: Cargo.toml
tui/src/: commands.rs  dsl.rs  main.rs  state.rs
tui/src/templates/: 5-card-draw.sexp  5-card-stud.sexp  7-card-stud.sexp  five-card-draw.sexp  five-card-stud.sexp  texas-holdem.sexp
ui/: Cargo.toml
ui/src/: main.rs
