[package]
name = "poker-assistant-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
itertools = "0.12.0"
plotters = "0.3.5"
poker = { version = "0.5.0", features = ["static_lookup"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8.0"
smallvec = "1.11.2"
strum = { version = "0.25.0", features = ["derive"] }
