[package]
name = "compact-poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
poker = { version = "0.5.0", default-features = false }
variter = "0.3.0"

[dev-dependencies]
quickcheck = "1.0.3"
