[package]
name = "poker-assistant-lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
compact-poker = { version = "0.1.0", path = "../compact-poker" }
fasthash = "0.4.0"
lazy_static = "1.4.0"
poker = "0.5.0"

[build-dependencies]
compact-poker = { version = "0.1.0", path = "../compact-poker" }
itertools = "0.12.0"
poker = "0.5.0"
rayon = "1.8.0"
